argocd/manifests/envoy-gateway/httproute-vm-metrics.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-metrics
  namespace: victoria-metrics
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - vm-metrics.homelab.gbsoft.net
  rules:
    - backendRefs:
        - name: victoria-metrics-victoria-metrics-single-server
          port: 8428
